--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,12 +3,14 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "Start":"nodemon app.js"
-  },
+  "start": "node app.js",
+  "dev": "nodemon app.js",
+  "test": "echo \"Error: no test specified\" && exit 1"
+}
+,
   "repository": {
     "type": "git",
-    "url": "https://github.com/PiyumalShalinda/WILD-LANKA-GO.git",
+    "url": "https://github.com/PiyumalShalinda/WILD-LANKA-GO.git"
     
   },
   "author": "",
