--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Backend In wild Lanka Go",
   "main": "app.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
@@ -26,16 +27,10 @@
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.2",
     "mongoose": "^8.18.0",
-
-    "
-    "node-fetch": "^3.3.2"
-
-
+    "node-fetch": "^3.3.2",
     "multer": "^2.0.2"
-
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
-  },
-  "type": "module"
+  }
 }
