--- a/Backend/package.json
+++ b/Backend/package.json
@@ -27,8 +27,9 @@
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.2",
     "mongoose": "^8.18.0",
+    "multer": "^2.0.2",
     "node-fetch": "^3.3.2",
-    "multer": "^2.0.2"
+    "pdfkit": "^0.17.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
