--- a/Backend/package.json
+++ b/Backend/package.json
@@ -25,10 +25,10 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "jspdf": "^3.0.2",
+    "pdfkit": "^0.15.0",
     "mongoose": "^8.18.0",
-    "node-fetch": "^3.3.2",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
