--- a/Backend/package.json
+++ b/Backend/package.json
@@ -31,9 +31,9 @@
     "multer": "^2.0.2",
     "node-fetch": "^3.3.2",
 
-    "pdfkit": "^0.17.2"
+    "pdfkit": "^0.17.2",
 
-    "nodemailer": "^7.0.6",
+    "nodemailer": "^7.0.6"
    
 
   },
