--- a/Backend/package.json
+++ b/Backend/package.json
@@ -30,12 +30,9 @@
     "mongoose": "^8.18.0",
     "multer": "^2.0.2",
     "node-fetch": "^3.3.2",
-
+    "nodemailer": "^7.0.6",
     "pdfkit": "^0.17.2",
-
-    "nodemailer": "^7.0.6"
-   
-
+    "readdirp": "^4.1.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
