--- a/Backend/package.json
+++ b/Backend/package.json
@@ -21,27 +21,21 @@
   "homepage": "https://github.com/PiyumalShalinda/WILD-LANKA-GO#readme",
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.2",
     "jspdf-autotable": "^5.0.2",
+    "jwks-rsa": "^3.2.0",
     "mongoose": "^8.18.0",
     "multer": "^2.0.2",
+    "node-cron": "^4.2.1",
     "node-fetch": "^3.3.2",
-
-
     "nodemailer": "^7.0.6",
     "pdfkit": "^0.17.2",
     "readdirp": "^4.1.2"
-
-
-  
-   
-
-
-
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
