--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.5.0",
     "@fortawesome/fontawesome-free": "^7.0.1",
     "@tailwindcss/vite": "^4.1.12",
     "axios": "^1.11.0",
