refactor: update Frontend components and clean up files
- Update dashboard pages for all roles
- Modify authentication components and context
- Update pages: activities, events, complaints, donations
- Remove deprecated files and layouts
- Update navigation and routing
- Modify services and utilities
- Prepare for lowercase frontend migration

--- a/Frontend/jsconfig.json
+++ b/Frontend/jsconfig.json
@@ -14,7 +14,8 @@
     "forceConsistentCasingInFileNames": true
   },
   "include": [
-    "src/**/*"
+    "src/**/*.js",
+    "src/**/*.jsx"
   ],
   "exclude": [
     "node_modules",
