--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,15 +16,20 @@
     "axios": "^1.11.0",
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.12.8",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "multer": "^2.0.2",
+    "qrcode": "^1.5.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.2",
+    "recharts": "^3.2.1",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
