chore: update root package dependencies
- Update package.json for monorepo configuration
- Sync package-lock.json with latest dependencies

--- a/package.json
+++ b/package.json
@@ -1,5 +1,26 @@
 {
+  "name": "wild-lanka-go",
+  "version": "1.0.0",
+  "description": "Wild Lanka Go - Wildlife Management System",
+  "private": true,
+  "scripts": {
+    "dev": "npm run dev:backend",
+    "dev:backend": "cd backend && npm run dev",
+    "dev:frontend": "cd frontend && npm run dev",
+    "dev:both": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
+    "install:all": "npm install && cd backend && npm install && cd ../frontend && npm install",
+    "build": "cd frontend && npm run build",
+    "start": "cd backend && npm start",
+    "seed": "cd backend && npm run seed"
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.2"
+  },
   "dependencies": {
     "lucide-react": "^0.544.0"
-  }
+  },
+  "workspaces": [
+    "backend",
+    "frontend"
+  ]
 }
