--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -9,10 +9,12 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "api/index.js"
+      "dest": "api/index.js",
+      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"]
     }
   ],
   "env": {
     "NODE_ENV": "production"
-  }
+  },
+  "regions": ["sin1"]
 }
